added endpoint to update experience
